--- a/frontend/src/components/partnerships/partnerships.css
+++ b/frontend/src/components/partnerships/partnerships.css
@@ -1,16 +1,19 @@
 /* ===========================
    PAGE LAYOUT
    =========================== */
+  
 .page-container {
   margin-left: 30px;
   display: flex;
   min-height: 100vh;
   font-family: "Inter", sans-serif;
-  background-image: url("../../assets/hcdcbldg.png");
+
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
+  background-color: rgba(0, 0, 0, 0.6);
+  background-blend-mode: darken; /* or multiply, overlay, screen */
   
 }
 
